# OrgGraph

./: .dockerignore  .env.example  .env.sample  .gitignore  AGENTS.md  ORGGRAPH_CHEATSHEET.md  ORGGRAPH_USAGE_GUIDE.md  ORG_INTEGRATION.md  PHASE1_TASKLIST.md  PHASE3_TASKLIST.md  PHASE4_PR_DESCRIPTION.md  PHASE4_TASKLIST.md  PHASE5_TASKLIST.md  PHASE6_TASKLIST.md  POSTGRES_MIGRATION.md  PRODUCTION_PROMOTION.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  SANDBOX_CONNECT_CHECKLIST.md  package.json  pnpm-lock.yaml
.cursor/: mcp.json
.github/: pull_request_template.md  requirements-cumulusci.txt
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
config/: api.docker.json  api.docker.sample.json
docker/: Dockerfile  Dockerfile.web  docker-compose.yml
docs/: CHEATSHEET.md  ORGGRAPH_LIFECYCLE.md  ORGUMENTED_DATA_LIFECYCLE.md  ORGUMENTED_LIFECYCLE.md  README.md  USAGE_GUIDE.md  VALUE_PROOF_PACK.md
manifest/: package.xml
scripts/: actions-retention-policy.test.mjs  ci-detect-heavy-changes.mjs  ci-detect-heavy-changes.test.mjs  clean-eadir.mjs  clean-eadir.sh  desktop-release-smoke.ps1  ingest-report.sh  llm-provider-smoke.sh  load-dotenv.sh  phase12-replay-load.sh  phase12-replay-regression.sh  phase13-metrics-export.sh  phase14-drift-gate.sh  phase14-drift-report.sh  phase17-benchmark.mjs  phase17-benchmark.sh  phase17-human-benchmark-finalize.mjs  phase17-human-benchmark-prepare.mjs  phase17-human-benchmark-publish.mjs  (+34 more)
(+435 files in other folders)
