[package]
name = "orgumented-desktop"
version = "0.1.0"
description = "Orgumented desktop shell"
authors = ["Orgumented"]
edition = "2021"

[lib]
name = "orgumented_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
